--- a/reclaim/templates/storeview/overview.html
+++ b/reclaim/templates/storeview/overview.html
@@ -1,52 +1,63 @@
+{% extends 'storeview/base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
-    <link rel="stylesheet" href="{% static 'css/scroll.css' %}" />
+{% block title %}落とし物一覧{% endblock %}
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="{% static 'js/scroll.js' %}" defer></script>
-  </head>
-  <body>
-    {% if user.is_authenticated %}
-    <nav class="navbar navbar-dark sticky-top bg-success">
-      <a class="navbar-brand" href="{% url 'storeview:index' %}">Reclaim</a>
-      <div class="navbar-nav d-flex flex-row">
-        <h2 class="navbar-text text-white">今見つかっている落とし物一覧</h2>
+{% block body %}
+  <div class="container-fluid py-4">
+    <div class="row mb-4">
+      <div class="col">
+        <h2 class="h3 mb-3">今見つかっている落とし物一覧</h2>
       </div>
-      <div class="navbar-nav d-flex flex-row">
+    </div>
 
-      </div>
-    </nav>
-    {% endif %}
     {% if object_list %}
-    <div class="list slider">
-      {% for item in object_list %}
-        <div class="card p-4 m-4 bg-light border border-success rounded">
-          {% if item.item_image %}
-            <img src="{{ MEDIA_URL }}{{ item.item_image }}" class="card-img-top" alt="..." />
-          {% endif %}
-          <div class="card-body">
-            <h4 class="card-title">{{ item.item_name }}</h4>
-            <p class="card-text">{{ item.item_category_id }}</p>
-            {% for i in item.item_tag_id.all %}
-              {{ i }}
+      <div class="row">
+        <div class="col">
+          <div class="list slider px-2">
+            {% for item in object_list %}
+              <div class="px-2">
+                <div class="card h-100 shadow-sm hover-card">
+                  {% if item.item_image %}
+                    <img src="{{ MEDIA_URL }}{{ item.item_image }}" class="card-img-top" alt="{{ item.item_name }}" style="height: 200px; object-fit: cover;" />
+                  {% endif %}
+                  <div class="card-body">
+                    <h5 class="card-title">{{ item.item_name }}</h5>
+                    <p class="card-text text-muted">
+                      <i class="bi bi-folder"></i> {{ item.item_category_id }}
+                    </p>
+                    {% if item.item_tag_id.all %}
+                      <div class="mb-2">
+                        {% for i in item.item_tag_id.all %}
+                          <span class="badge bg-secondary">{{ i }}</span>
+                        {% endfor %}
+                      </div>
+                    {% endif %}
+                    <p class="card-text">
+                      <i class="bi bi-geo-alt"></i> {{ item.item_lost_location }}
+                    </p>
+                    <a href="{% url 'storeview:detail' item.pk %}" class="btn btn-primary w-100">
+                      詳細を見る＆編集する
+                    </a>
+                  </div>
+                </div>
+              </div>
             {% endfor %}
-            <p class="card-text">{{ item.item_lost_location }}</p>
-            <a href="{% url 'storeview:detail' item.pk %}" class="btn btn-primary">詳細を見る＆編集する</a>
           </div>
         </div>
-      {% endfor %}
-    </div>
+      </div>
+    {% else %}
+      <div class="alert alert-info" role="alert">
+        登録されている落とし物はありません。
+      </div>
     {% endif %}
-    
-  </body>
-</html>
+  </div>
+
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
+  <link rel="stylesheet" href="{% static 'css/scroll.css' %}" />
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="{% static 'js/scroll.js' %}" defer></script>
+{% endblock %}
