--- a/reclaim/templates/userview/base.html
+++ b/reclaim/templates/userview/base.html
@@ -51,6 +51,11 @@
           <ul class="navbar-nav">
             {% if user.is_authenticated %}
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:profile' %}">
+                  <i class="bi bi-person-circle me-1"></i>アカウント
+                </a>
+              </li>
+              <li class="nav-item">
                 <form action="{% url 'accounts:logout' %}" method="post" class="d-inline">
                   {% csrf_token %}
                   <button type="submit" class="btn nav-link">
