--- a/reclaim/static/css/scroll.css
+++ b/reclaim/static/css/scroll.css
@@ -14,3 +14,17 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+/* スクロールバーのスタイルを改善 */
+.visual::-webkit-scrollbar {
+  width: 12px;
+}
+.visual::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+.visual::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 6px;
+}
+.visual::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
