--- a/reclaim/templates/userview/list.html
+++ b/reclaim/templates/userview/list.html
@@ -21,4 +21,15 @@
                 {% endfor %}
               </div>
               <p class="card-text small text-muted mb-3">
-                <i class="bi bi-geo-alt me
+                <i class="bi bi-geo-alt me-1"></i>{{ item.item_lost_location }}
+              </p>
+              <a href="{% url 'userview:detail' item.pk %}" class="btn btn-outline-success w-100">
+                詳細を見る
+              </a>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+{% endblock %}
