機能改善: AI生成JSON表示機能を追加し、画像アップロード機能を実装しました。アイテムモデルに新しいフィールドを追加し、検索機能を強化しました。

--- a/reclaim/templates/storeview/AiGenerate.html
+++ b/reclaim/templates/storeview/AiGenerate.html
@@ -70,9 +70,9 @@
 
               <div class="col-12">
                 <div class="mb-3">
-                  <label for="id_item_keyword" class="form-label">生成されたキーワード</label>
-                  {{ form.item_keyword.errors }}
-                  <textarea name="item_keyword" rows="3" id="id_item_keyword" class="form-control">{{ gen }}</textarea>
+                  <label for="id_ai_generated_json" class="form-label">生成されたキーワード</label>
+                  {{ form.ai_generated_json.errors }}
+                  <textarea name="ai_generated_json" rows="3" id="id_ai_generated_json" class="form-control">{{ gen }}</textarea>
                 </div>
               </div>
 
