--- a/reclaim/templates/userview/item_detail.html
+++ b/reclaim/templates/userview/item_detail.html
@@ -24,7 +24,7 @@
               <dd class="col-sm-9 mb-3">{{ item.item_description }}</dd>
 
               <dt class="col-sm-3"><i class="bi bi-tag me-2"></i>キーワード</dt>
-              <dd class="col-sm-9 mb-3">{{ item.item_keyword }}</dd>
+              <dd class="col-sm-9 mb-3">{{ item.ai_generated_json }}</dd>
 
               <dt class="col-sm-3"><i class="bi bi-folder me-2"></i>カテゴリー</dt>
               <dd class="col-sm-9 mb-3">{{ item.item_category_id }}</dd>
