--- a/reclaim/templates/storeview/form.html
+++ b/reclaim/templates/storeview/form.html
@@ -73,9 +73,9 @@
 
                 <div class="col-12">
                   <div class="mb-3">
-                    <label for="id_item_keyword" class="form-label">キーワード</label>
-                    {{ form.item_keyword.errors }}
-                    <textarea name="item_keyword" rows="3" id="id_item_keyword" class="form-control" placeholder="検索用のキーワード（任意）"></textarea>
+                    <label for="id_ai_generated_json" class="form-label">キーワード</label>
+                    {{ form.ai_generated_json.errors }}
+                    <textarea name="ai_generated_json" rows="3" id="id_ai_generated_json" class="form-control" placeholder="検索用のキーワード（任意）"></textarea>
                   </div>
                 </div>
 
