--- a/reclaim/templates/storeview/form.html
+++ b/reclaim/templates/storeview/form.html
@@ -92,6 +92,7 @@
                     <button type="submit" class="btn btn-primary btn-lg">
                       <i class="bi bi-check-lg"></i> 登録する
                     </button>
+                    {% comment %} #TODO 自動でAIGenを呼ぶ様にする。 {% endcomment %}
                     <a href="{% url 'storeview:index' %}" class="btn btn-secondary">
                       <i class="bi bi-arrow-left"></i> 戻る
                     </a>
