--- a/reclaim/templates/userview/list.html
+++ b/reclaim/templates/userview/list.html
@@ -16,9 +16,9 @@
               <h5 class="card-title text-truncate">{{ item.item_name }}</h5>
               <p class="card-text text-muted mb-2">{{ item.item_category_id }}</p>
               <div class="mb-3">
-                {% for i in item.item_tag_id.all %}
+                {% comment %} {% for i in item.item_tag_id.all %}
                   <span class="badge bg-success rounded-pill me-1">{{ i }}</span>
-                {% endfor %}
+                {% endfor %} {% endcomment %}
               </div>
               <p class="card-text small text-muted mb-3">
                 <i class="bi bi-geo-alt me-1"></i>{{ item.item_lost_location }}
