--- a/reclaim/templates/storeview/base.html
+++ b/reclaim/templates/storeview/base.html
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'storeview:search_page' %}">検索</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'storeview:upload_image' %}">画像アップロード</a>
+                </li>
               </ul>
               <div class="d-flex">
                 <a href="{% url 'accounts:profile' %}" class="btn btn-outline-light me-2">
@@ -49,6 +52,18 @@
             </div>
           </div>
         </nav>
+        
+        {% if messages %}
+          <div class="container mt-3">
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {% endfor %}
+          </div>
+        {% endif %}
+
         <div class="container py-4">
           {% block body %}{% endblock %}
         </div>
