--- a/reclaim/templates/storeview/upload_image.html
+++ b/reclaim/templates/storeview/upload_image.html
@@ -4,12 +4,17 @@
 {% block title %}画像アップロード{% endblock %}
 
 {% block body %}
-  <div class="container">
-    <h1>画像アップロード</h1>
-    <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit" class="btn btn-primary">アップロード</button>
-    </form>
+<link rel="stylesheet" href="{% static 'css/upload.css' %}">
+<div class="upload-container">
+  <div class="upload-card">
+    <div class="card-body">
+      <h1 class="upload-title">画像アップロード</h1>
+      <form method="post" enctype="multipart/form-data" class="upload-form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="upload-button">アップロード</button>
+      </form>
+    </div>
   </div>
+</div>
 {% endblock %}
