--- a/reclaim/templates/userview/item_detail.html
+++ b/reclaim/templates/userview/item_detail.html
@@ -1,6 +1,8 @@
 {% extends 'userview/base.html' %}
 {% load static %}
-{% block title %}{{ item.item_name }}{% endblock %}
+{% block title %}
+  {{ item.item_name }}
+{% endblock %}
 {% block body %}
   <div class="container py-5">
     <div class="row g-4">
@@ -20,34 +22,31 @@
         <div class="card shadow-sm">
           <div class="card-body">
             <dl class="row mb-0">
-              <dt class="col-sm-3"><i class="bi bi-card-text me-2"></i>説明</dt>
+              <dt class="col-sm-3">
+                <i class="bi bi-card-text me-2"></i>説明
+              </dt>
               <dd class="col-sm-9 mb-3">{{ item.item_description }}</dd>
 
-              <dt class="col-sm-3"><i class="bi bi-tag me-2"></i>キーワード</dt>
+              <dt class="col-sm-3">
+                <i class="bi bi-tag me-2"></i>キーワード
+              </dt>
               <dd class="col-sm-9 mb-3">{{ item.ai_generated_json }}</dd>
 
-              <dt class="col-sm-3"><i class="bi bi-folder me-2"></i>カテゴリー</dt>
+              <dt class="col-sm-3">
+                <i class="bi bi-folder me-2"></i>カテゴリー
+              </dt>
               <dd class="col-sm-9 mb-3">{{ item.item_category_id }}</dd>
 
-              <dt class="col-sm-3"><i class="bi bi-tags me-2"></i>タグ</dt>
-              <dd class="col-sm-9 mb-3">
-                {% comment %} {% for tag in item.item_tag_id.all %}
-                  <span class="badge bg-success rounded-pill me-1">{{ tag }}</span>
-                {% endfor %} {% endcomment %}
-              </dd>
-
-              <dt class="col-sm-3"><i class="bi bi-geo-alt me-2"></i>場所</dt>
+              <dt class="col-sm-3">
+                <i class="bi bi-geo-alt me-2"></i>場所
+              </dt>
               <dd class="col-sm-9">{{ item.item_lost_location }}</dd>
             </dl>
           </div>
         </div>
         <div class="d-grid gap-2 mt-3">
-          <a href="{% url 'userview:contact' item.pk %}" class="btn btn-success btn-lg">
-            <i class="bi bi-envelope me-2"></i>連絡する
-          </a>
-          <a href="{% url 'userview:index' %}" class="btn btn-outline-secondary">
-            <i class="bi bi-arrow-left me-2"></i>戻る
-          </a>
+          <a href="{% url 'userview:contact' item.pk %}" class="btn btn-success btn-lg"><i class="bi bi-envelope me-2"></i>連絡する</a>
+          <a href="{% url 'userview:index' %}" class="btn btn-outline-secondary"><i class="bi bi-arrow-left me-2"></i>戻る</a>
         </div>
       </div>
     </div>
