--- a/reclaim/templates/userview/search.html
+++ b/reclaim/templates/userview/search.html
@@ -8,7 +8,7 @@
         <h1 class="display-5 text-center mb-4"><i class="bi bi-search"></i> 落とし物を探す</h1>
         <form method="GET" action="{% url 'userview:search' %}" class="mb-4">
           <div class="input-group input-group-lg shadow-sm">
-            <input type="text" id="q" name="query" class="form-control" placeholder="キーワードを入力してください" required />
+            <input type="text" id="q" name="query" class="form-control" placeholder="キーワードを入力してください" required value="{{ query }}" />
             <button type="submit" class="btn btn-success px-4">
               <i class="bi bi-search me-2"></i>検索
             </button>
